--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=${APP_PROFILE:test}
+spring.profiles.active=test
 
 spring.jpa.open-in-view=false
 
@@ -7,3 +7,8 @@ security.oauth2.client.client-secret=${CLIENT_SECRET:dscatalog123}
 
 jwt.secret=${JWT_SECRET:MY-JWT-SECRET}
 jwt.duration=${JWT_DURATION:86400}
+
+aws.access_key_id=${AWS_KEY:empty}
+aws.secret_access_key=${AWS_SECRET:empty}
+s3.bucket=${DSCATALOG_BUCKET_NAME:empty}
+s3.region=${DSCATALOG_BUCKET_REGION:sa-east-1}
