--- a/frontweb/package.json
+++ b/frontweb/package.json
@@ -19,7 +19,6 @@
     "bootstrap": "^5.1.3",
     "jwt-decode": "^3.1.2",
     "msw": "^0.41.0",
-    "node-sass": "5.0",
     "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-content-loader": "^6.1.0",
@@ -32,6 +31,8 @@
     "react-select": "^5.3.0",
     "react-select-event": "^5.5.0",
     "react-toastify": "^9.0.1",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
